--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -16,15 +16,19 @@ spring.cloud.gateway.discovery.locator.lowerCaseServiceId=true
 #spring.zipkin.base-url=http://localhost:9411/
 spring.sleuth.sampler.probability=1.0
 
+#Spring settings
+spring.main.allow-bean-definition-overriding=true
+
 ##Security
+
 #spring.security.oauth2.resourceserver.jwt.jwk-set-uri = http://keycloak:8080/realms/master/protocol/openid-connect/certs
 #spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/spring-boot-microservices-realm
 
 #CORS !
-spring.cloud.gateway.globalcors.cors-configurations['[/**]'].allowed-origins="http://localhost:3000"
-spring.cloud.gateway.globalcors.cors-configurations['[/**]'].allowed-methods=POST,GET,PUT,DELETE,OPTIONS
-spring.cloud.gateway.globalcors.cors-configurations['[/**]'].allowed-headers="*"
-
-
-#spring.cloud.gateway.globalcors.cors-configurations['[/**]'].allowed-origin-patterns=http://localhost:3000
-spring.cloud.gateway.globalcors.add-to-simple-url-handler-mapping=true
+#spring.cloud.gateway.globalcors.cors-configurations['[/**]'].allowed-origins="http://localhost:3000"
+#spring.cloud.gateway.globalcors.cors-configurations['[/**]'].allowed-methods=POST,GET,PUT,DELETE,OPTIONS
+#spring.cloud.gateway.globalcors.cors-configurations['[/**]'].allowed-headers="*"
+#
+#
+##spring.cloud.gateway.globalcors.cors-configurations['[/**]'].allowed-origin-patterns=http://localhost:3000
+#spring.cloud.gateway.globalcors.add-to-simple-url-handler-mapping=true
